@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2025-02-23 Sun 15:37 -->
+<!-- 2025-02-25 Tue 16:42 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=1024, initial-scale=1" />
 <title>Change Log</title>
@@ -230,12 +230,12 @@
 
 <tr>
 <td class="org-right"><b>Updated:</b></td>
-<td class="org-left"><i>2025-02-23 14:47:57</i></td>
+<td class="org-left"><i>2025-02-25 16:42:17</i></td>
 </tr>
 
 <tr>
 <td class="org-right"><b>Generated:</b></td>
-<td class="org-left"><i>2025-02-23 15:37:40</i></td>
+<td class="org-left"><i>2025-02-25 16:42:18</i></td>
 </tr>
 </tbody>
 </table>
@@ -359,6 +359,9 @@ Copyright &copy; 2025 Mitch Richling. All rights reserved.
 <li>New
 <ul class="org-ul">
 <li>peterdejongEAAO.cpp</li>
+<li>simone_attractor_bmovie.cpp</li>
+<li>simone_attractor_search.cpp</li>
+
 <li>demo_corners.cpp</li>
 <li>lorenz_mM.cpp</li>
 <li>heart2025.cpp</li>
