@@ -94,6 +94,9 @@ Copyright \copy {{{time(%Y)}}} Mitch Richling. All rights reserved.
   - Examples
     - New
       - peterdejongEAAO.cpp
+      - simone_attractor_bmovie.cpp
+      - simone_attractor_search.cpp
+
       - demo_corners.cpp
       - lorenz_mM.cpp
       - heart2025.cpp
